# OpenGL_Kinect

./: CMakeCache.txt  CMakeLists.txt  Camera.hpp  Color.hpp  GlobalsDefines.hpp  Light.hpp  Makefile  Math.cpp  Math.hpp  Mesh.hpp  Object.hpp  Parser.hpp  README.md  Renderer.hpp  Shader.hpp  Source.cpp  Utils.hpp  cmake_install.cmake  engine
Models/: box.txt  car.txt  skull.txt  skullTrue.txt  triangle.txt
Shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
